crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@204.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('2', '$ <= 1');"
---
SelectStmt@0..39
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'2'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..37
        Sconst@29..37 "'$ <= 1'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

