crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@205.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('2', '$ == \"2\"');"
---
SelectStmt@0..41
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'2'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..39
        Sconst@29..39 "'$ == \"2\"'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

