crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@206.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '2' @? '$ == \"2\"';"
---
SelectStmt@0..31
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..30
      TypeCast@13..16
        AConst@13..16
          Sconst@13..16 "'2'"
      Whitespace@16..17 " "
      Op@17..19 "@?"
      Whitespace@19..20 " "
      AConst@20..30
        Sconst@20..30 "'$ == \"2\"'"
  Ascii59@30..31 ";"

