crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@207.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '2' @@ '$ > 1';"
---
SelectStmt@0..28
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..27
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..27
      TypeCast@13..16
        AConst@13..16
          Sconst@13..16 "'2'"
      Whitespace@16..17 " "
      Op@17..19 "@@"
      Whitespace@19..20 " "
      AConst@20..27
        Sconst@20..27 "'$ > 1'"
  Ascii59@27..28 ";"

