crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1]', 'strict $[1]');"
---
SelectStmt@0..46
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'[1]'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..44
        Sconst@31..44 "'strict $[1]'"
  Ascii41@44..45 ")"
  Ascii59@45..46 ";"

