crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@212.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '[]' @@ '$';"
---
SelectStmt@0..25
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..24
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..24
      TypeCast@13..17
        AConst@13..17
          Sconst@13..17 "'[]'"
      Whitespace@17..18 " "
      Op@18..20 "@@"
      Whitespace@20..21 " "
      AConst@21..24
        Sconst@21..24 "'$'"
  Ascii59@24..25 ";"

