crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@213.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '[1,2,3]' @@ '$[*]';"
---
SelectStmt@0..33
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..32
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..32
      TypeCast@13..22
        AConst@13..22
          Sconst@13..22 "'[1,2,3]'"
      Whitespace@22..23 " "
      Op@23..25 "@@"
      Whitespace@25..26 " "
      AConst@26..32
        Sconst@26..32 "'$[*]'"
  Ascii59@32..33 ";"

